<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
    <name>rosbot3_description</name>
    <version>0.1.0</version>
    <description>URDF/xacro description for ROSbot3.</description>
    <maintainer email="vito.franzosi@gmail.com">Vito Rodrigues Franzosi</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <depend>xacro</depend>
    <depend>ros2_control</depend>
    <depend>gazebo_ros</depend>
    <depend>sensor_msgs</depend>
    <exec_depend>rclpy</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>    
</package>